[package]
name = "bevy_eventwork"
version = "0.7.0"
authors = ["James <jamescarterbell@gmail.com>", "Neikos <neikos@neikos.email>"]
edition = "2021"
description = "Event based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/jamescarterbell/bevy_eventwork"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false
exclude =  ["assets"]
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["tcp"]
tcp = []

[[example]]
name = "client"

[[example]]
name = "server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "> 0.6", features = [], default-features = false }
bincode = "1.3.2"
dashmap = "4.0.2"
derive_more = "0.99.13"
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.24"
async-channel = "1.6.1"
async-trait = "0.1.52"
async-net = "1.6.1"
futures-lite = "1.12.0"

[dev-dependencies]
bevy = "> 0.6"
