[package]
name = "bevy_eventwork"
version = "0.7.1"
authors = ["James <jamescarterbell@gmail.com>", "Neikos <neikos@neikos.email>"]
edition = "2021"
description = "Event based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/jamescarterbell/bevy_eventwork"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false
exclude =  ["assets"]
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["tcp"]
tcp = ["async-net"]

[[example]]
name = "client"

[[example]]
name = "server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is a bevy plugin
bevy = { version = "> 0.6", features = [], default-features = false }
# Used for on wire serialization
bincode = "1.3.2"
serde = { version = "1.0.133", features = ["derive"] }
# Used for thread safe book keeping
dashmap = "4.0.2"
# Used for non-tokio dependent threaded message passing
async-channel = "1.6.1"
# Used for providers, which are async in nature
async-trait = "0.1.52"

# Used for TCP provider
async-net = {version = "1.6.1", optional = true}

# Used for Stream type and other ext
futures-lite = "1.12.0"

[dev-dependencies]
bevy = "> 0.6"
