[package]
name = "bevy_eventwork"
version = "0.8.0"
authors = [
    "James <jamescarterbell@gmail.com>",
    "Neikos <neikos@neikos.email>",
    "Noah <noahshomette@gmail.com>",
]
edition = "2021"
description = "Event based networking library for Bevy"
readme = "README.md"
repository = "https://github.com/jamescarterbell/bevy_eventwork"
license = "MIT"
categories = ["game-development", "network-programming"]
autoexamples = false
resolver = "2"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["tcp"]
tcp = ["async-net"]

[[example]]
name = "client"

[[example]]
name = "server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is a bevy plugin
bevy = { version = "0.13.0", features = [
    "multi-threaded",
], default-features = false }
# Used for on wire serialization
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }
# Used for thread safe book keeping
dashmap = "5.5.3"
# Used for non-tokio dependent threaded message passing
async-channel = "2.0.0"
# Used for providers, which are async in nature
async-trait = "0.1.74"

# Used for TCP provider
async-net = { version = "2.0.0", optional = true }

# Used for Stream type and other ext
futures-lite = "2.0.0"

[dev-dependencies]
bevy = { version = "0.13.0", features = ["default_font"] }
